# newsbot

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  QUICK_REFERENCE.md  README.md  SUBSCRIPTION_GUIDE.md  admin_tool.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_subscription.sh  simple_news_bot.py  start_bot.sh  telegram_bot.py
data/: subscriptions.json
src/generation/: urlGenerator.py
src/getter/: newsGetter.py
src/parser/: newsParser.py
src/source/: newsSourceFetcher.py
src/subscription/: subscription_manager.py
src/summarizer/: newsSummarizer.py
tests/: test_subscription.py
